--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -205,6 +205,10 @@ en:
     percentage:
       format:
         format: "%n%"
+  results:
+    unit:
+      one: result
+      other: results
   supply_teachers:
     branches:
       branch:
@@ -230,8 +234,8 @@ en:
         inputs_header: Choices used to generate this list
         other_radius_html: 'Change this distance to: '
         print: Print this page
-        results_found: results found
-        results_found_with_location_html: results found within <strong>%{range}</strong> of <strong>%{postcode}</strong> .
+        results_found_html: "<strong>%{results}</strong> found"
+        results_found_with_location_html: "<strong>%{results}</strong> found within <strong>%{range}</strong> of <strong>%{postcode}</strong>."
     journey:
       agency_payroll:
         postcode_question: What is your school’s postcode?
