Use units localisation for supplier counts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -209,6 +209,10 @@ en:
     unit:
       one: result
       other: results
+  suppliers:
+    unit:
+      one: supplier
+      other: suppliers
   supply_teachers:
     branches:
       branch:
