(fix) Change service name for Supply Teachers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -113,7 +113,7 @@ en:
       intro_paragraph: 'Use this service to:'
       management_consultancy_link: Find management consultancy services
       service_title: Crown Marketplace
-      supply_teachers_link: Find supply teachers and non-teaching staff
+      supply_teachers_link: Find supply teachers and agency workers
       temp_to_perm_calculator_link: Calculate the fee you have to pay when recruiting a supply teacher
   journey:
     error_summary:
