Add a link to the header so that users can go back to the start page of the service

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,8 @@ en:
       support_aria_label: Email us for support with this service
       support_email_html: Email %{link} for support.
       title: Crown Commercial Service
+    header:
+      go_start_page_aria_label: Go to start page of %{service_name}
   management_consultancy:
     journey:
       choose_expenses:
