Gate frameworks by login capability
Cognito users can go anywhere, but DfE users can only see school pages,
and then only if they are from a non-profit school.

Caveat: this requires the developer to remember to add it in each new
controller.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -221,6 +221,10 @@ en:
     unit:
       one: result
       other: results
+  shared:
+    not_permitted:
+      details: You don’t have permission to view this page.
+      title: Not permitted
   suppliers:
     unit:
       one: supplier
