Localise suppliers found as a sentence
This makes FM and MC more consistent with supply teachers.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,6 +93,7 @@ en:
       index:
         direct_award_possible: Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.
         header: Lot %{lot} suppliers
+        suppliers_found_html: "<strong>%{suppliers}</strong> found"
       supplier:
         contact_email_missing: Contact email not available
         contact_name_missing: Contact name not available
@@ -162,6 +163,8 @@ en:
       choose_services:
         question: What services will you require?
     suppliers:
+      index:
+        suppliers_found_html: "<strong>%{suppliers}</strong> found"
       supplier:
         contact_email_missing: Contact email not available
         contact_name_missing: Contact name not available
