--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -303,15 +303,11 @@ en:
         panel_body: Based on the information provided you could be charged
     journey:
       contract_start:
-        question: What date was the worker first supplied to you on their current contract?
-      day_rate:
-        question: What is the supplier’s total day rate for the worker?
-        question-hint: An amount in pounds. For example, 500
-      days_per_week:
-        question: How many days per week is the worker contracted to work?
-        question-hint: For example, 5
-      hire_date:
-        question: What date do you want to hire them from?
-      markup_rate:
-        question: What mark-up does the supplier charge for the worker?
-        question-hint: This is the percentage fee you agreed with the supplier. For example, 40
+        contract_start_question: What date was the worker first supplied to you on their current contract?
+        day_rate_question: What is the supplier’s total day rate for the worker?
+        day_rate_question-hint: An amount in pounds. For example, 500
+        days_per_week_question: How many days per week is the worker contracted to work?
+        days_per_week_question-hint: For example, 5
+        hire_date_question: What date do you want to hire them from?
+        markup_rate_question: What mark-up does the supplier charge for the worker?
+        markup_rate_question-hint: This is the percentage fee you agreed with the supplier. For example, 40
