--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -306,13 +306,12 @@ en:
       contract_start:
         contract_start_question: What date was the worker first supplied to you on their current contract?
         contract_start_question_hint: For example, 31 3 1980
+        day_rate_question: What is the supplier’s total day rate for the worker?
+        day_rate_question_hint: An amount in pounds. For example, 500
         days_per_week_question: How many days per week is the worker contracted to work?
         days_per_week_question_hint: For example, 5
         hire_date_question: What date do you want to hire them from?
         hire_date_question_hint: For example, 31 3 1980
-      day_rate:
-        question: What is the supplier’s total day rate for the worker?
-        question_hint: An amount in pounds. For example, 500
       markup_rate:
         question: What mark-up does the supplier charge for the worker?
         question_hint: This is the percentage fee you agreed with the supplier. For example, 40
