--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -305,6 +305,7 @@ en:
     journey:
       contract_start:
         question: What date was the worker first supplied to you on their current contract?
+        question_hint: For example, 31 3 1980
       day_rate:
         question: What is the supplier’s total day rate for the worker?
         question_hint: An amount in pounds. For example, 500
@@ -313,6 +314,7 @@ en:
         question_hint: For example, 5
       hire_date:
         question: What date do you want to hire them from?
+        question_hint: For example, 31 3 1980
       markup_rate:
         question: What mark-up does the supplier charge for the worker?
         question_hint: This is the percentage fee you agreed with the supplier. For example, 40
