--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,26 @@ en:
           attributes:
             location:
               invalid_location: Enter a valid postcode
+        supply_teachers/journey/contract_start:
+          attributes:
+            contract_start_day:
+              blank: Enter a valid day for the date the contract started
+            contract_start_month:
+              blank: Enter a valid month for the date the contract started
+            contract_start_year:
+              blank: Enter a valid year for the date the contract started
+            day_rate:
+              blank: Enter a valid number of pounds paid per day
+            days_per_week:
+              blank: Enter a valid number of days worked per week
+            hire_date_day:
+              blank: Enter a valid day for the date from which the worker will be hired
+            hire_date_month:
+              blank: Enter a valid month for the date from which the worker will be hired
+            hire_date_year:
+              blank: Enter a valid year for the date from which the worker will be hired
+            markup_rate:
+              blank: Enter a valid percentage mark-up rate
         supply_teachers/journey/looking_for:
           attributes:
             looking_for:
@@ -55,26 +75,6 @@ en:
           attributes:
             worker_type:
               inclusion: Select yes if you want an agency to supply the worker
-        temp_to_perm_calculator/journey/contract_start:
-          attributes:
-            contract_start_day:
-              blank: Enter a valid day for the date the contract started
-            contract_start_month:
-              blank: Enter a valid month for the date the contract started
-            contract_start_year:
-              blank: Enter a valid year for the date the contract started
-            day_rate:
-              blank: Enter a valid number of pounds paid per day
-            days_per_week:
-              blank: Enter a valid number of days worked per week
-            hire_date_day:
-              blank: Enter a valid day for the date from which the worker will be hired
-            hire_date_month:
-              blank: Enter a valid month for the date from which the worker will be hired
-            hire_date_year:
-              blank: Enter a valid year for the date from which the worker will be hired
-            markup_rate:
-              blank: Enter a valid percentage mark-up rate
   common:
     submit: Continue
   errors:
@@ -135,7 +135,6 @@ en:
       management_consultancy_link: Find management consultancy services
       service_title: Crown Marketplace
       supply_teachers_link: Find supply teachers and agency workers
-      temp_to_perm_calculator_link: Calculate the fee you have to pay when recruiting a supply teacher
   journey:
     error_summary:
       there_is_a_problem: There is a problem
@@ -276,13 +275,29 @@ en:
         print: Print this page
         results_found_html: "<strong>%{results}</strong> found"
         results_found_with_location_html: "<strong>%{results}</strong> found within <strong>%{range}</strong> of <strong>%{postcode}</strong>."
+    home:
+      fee:
+        header: Temp-to-perm fee
+        panel_body: Based on the information provided you could be charged
     journey:
       agency_payroll:
         postcode_question: What is your school’s postcode?
         question_hint: We use this to find agencies near to your school
         worker_term_question: How long do you need the worker for?
         worker_type_question: What type of worker do you need?
+      contract_start:
+        contract_start_question: What date was the worker first supplied to you on their current contract?
+        contract_start_question_hint: For example, 31 3 1980
+        day_rate_question: What is the supplier’s total day rate for the worker?
+        day_rate_question_hint: An amount in pounds. For example, 500
+        days_per_week_question: How many days per week is the worker contracted to work?
+        days_per_week_question_hint: For example, 5
+        hire_date_question: What date do you want to hire them from?
+        hire_date_question_hint: For example, 31 3 1980
+        markup_rate_question: What mark-up does the supplier charge for the worker?
+        markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
       looking_for:
+        answer_calculate_temp_to_perm_fee: To calculate the fee you'll be charged if you make an agency worker permanent
         answer_managed_service_provider: An agency to manage all my needs - a ‘managed service provider’
         answer_worker: An agency to supply an individual worker
         question: What are you looking for?
@@ -317,20 +332,3 @@ en:
         column1: Job type
         column2: Supplier mark-up
         header: Neutral vendor managed service providers
-  temp_to_perm_calculator:
-    home:
-      fee:
-        header: Temp-to-perm fee
-        panel_body: Based on the information provided you could be charged
-    journey:
-      contract_start:
-        contract_start_question: What date was the worker first supplied to you on their current contract?
-        contract_start_question_hint: For example, 31 3 1980
-        day_rate_question: What is the supplier’s total day rate for the worker?
-        day_rate_question_hint: An amount in pounds. For example, 500
-        days_per_week_question: How many days per week is the worker contracted to work?
-        days_per_week_question_hint: For example, 5
-        hire_date_question: What date do you want to hire them from?
-        hire_date_question_hint: For example, 31 3 1980
-        markup_rate_question: What mark-up does the supplier charge for the worker?
-        markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
