--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -286,15 +286,15 @@ en:
         worker_term_question: How long do you need the worker for?
         worker_type_question: What type of worker do you need?
       contract_start:
-        contract_start_question: What date was the worker first supplied to you on their current contract?
+        contract_start_question: When did the worker's current contract start?
         contract_start_question_hint: For example, 31 3 1980
-        day_rate_question: What is the supplier’s total day rate for the worker?
-        day_rate_question_hint: An amount in pounds. For example, 500
-        days_per_week_question: How many days per week is the worker contracted to work?
+        day_rate_question: What does the agency charge you per day for the worker?
+        day_rate_question_hint: An amount in pounds. For example, 150
+        days_per_week_question: How many days per week is the worker contracted for?
         days_per_week_question_hint: For example, 5
-        hire_date_question: What date do you want to hire them from?
+        hire_date_question: What date do you want to take the worker on permanently from?
         hire_date_question_hint: For example, 31 3 1980
-        markup_rate_question: What mark-up does the supplier charge for the worker?
+        markup_rate_question: What mark-up does the agency charge for the worker?
         markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
       looking_for:
         answer_calculate_temp_to_perm_fee: To calculate the fee you'll be charged if you make an agency worker permanent
