Test validation that TTPC days_per_week is an integer
Also add translation string for validation message.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
               blank: Enter a valid number of pounds paid per day
             days_per_week:
               blank: Enter a valid number of days worked per week
+              not_an_integer: Enter a whole number of days worked per week
             hire_date_day:
               blank: Enter a valid day for the date from which the worker will be hired
             hire_date_month:
