Test validation that TTPC days_per_week is 1-7
Also add translation strings for validation message.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,8 @@ en:
               blank: Enter a valid number of pounds paid per day
             days_per_week:
               blank: Enter a valid number of days worked per week
+              greater_than_or_equal_to: Enter a number of days between 1 and 7
+              less_than_or_equal_to: Enter a number of days between 1 and 7
               not_an_integer: Enter a whole number of days worked per week
             hire_date_day:
               blank: Enter a valid day for the date from which the worker will be hired
