Tweaks to TTPC days_per_week validation messages
I've tried to use the guidance in the GOV.UK Design System to come up
with these, but I feel as if there is some inconsistency in the guidance
in these two sections [1,2].

[1]: https://design-system.service.gov.uk/components/text-input/#error-messages
[2]: https://design-system.service.gov.uk/components/error-message/#use-instructions-and-descriptions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,9 +42,9 @@ en:
             day_rate:
               blank: Enter a valid number of pounds paid per day
             days_per_week:
-              blank: Enter a valid number of days worked per week
-              greater_than: Enter a number of days between 0 and 5
-              less_than_or_equal_to: Enter a number of days between 0 and 5
+              blank: Enter the number of days worked per week
+              greater_than: The number of days worked per week must be between 0 and 5
+              less_than_or_equal_to: The number of days worked per week must be between 0 and 5
             hire_date_day:
               blank: Enter a valid day for the date from which the worker will be hired
             hire_date_month:
