--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,6 +41,8 @@ en:
               blank: Enter a valid year for the date the contract started
             day_rate:
               blank: Enter the number of pounds charged per day
+              not_a_number: The number of pounds charged per day must be a number
+              not_an_integer: The number of pounds charged per day must be a whole number
             days_per_week:
               blank: Enter the number of days worked per week
               greater_than: The number of days worked per week must be between 0 and 5
