Add missing validation error message for TTPC days_per_week

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
               blank: Enter the number of days worked per week
               greater_than: The number of days worked per week must be between 0 and 5
               less_than_or_equal_to: The number of days worked per week must be between 0 and 5
+              not_a_number: The number of days worked per week must be a number
             hire_date_day:
               blank: Enter a valid day for the date from which the worker will be hired
             hire_date_month:
