Add missing validation error messages for TTPC date fields
I've tried to write these following the GOV.UK Design System guidance
and examplesi [1]. However, to do this properly, we probably need to
model each of the dates as a single attribute on the step and add custom
validation for those attributes. This would mean we could do things
like:

> If an incomplete date is entered and you know what is missing
>
> Say ‘[whatever it is] must include a [whatever is missing]’. For
example, ‘Date of birth must include a month’ or ‘Date of birth must
include a day and month’.

[1]: https://design-system.service.gov.uk/components/date-input/#error-messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,10 +35,20 @@ en:
           attributes:
             contract_start_day:
               blank: The contract start date must include a day
+              greater_than_or_equal_to: The day the contract starts must be between 1 and 31
+              less_than_or_equal_to: The day the contract starts must be between 1 and 31
+              not_a_number: The day the contract starts must be a number
+              not_an_integer: The day the contract starts must be a whole number
             contract_start_month:
               blank: The contract start date must include a month
+              greater_than_or_equal_to: The month the contract starts must be between 1 and 12
+              less_than_or_equal_to: The month the contract starts must be between 1 and 12
+              not_a_number: The month the contract starts must be a number
+              not_an_integer: The month the contract starts must be a whole number
             contract_start_year:
               blank: The contract start date must include a year
+              not_a_number: The year the contract starts must be a number
+              not_an_integer: The year the contract starts must be a whole number
             day_rate:
               blank: Enter the number of pounds charged per day
               greater_than: The number of pounds charged per day must be more than 0
@@ -51,10 +61,20 @@ en:
               not_a_number: The number of days worked per week must be a number
             hire_date_day:
               blank: The date the worker will be hired must include a day
+              greater_than_or_equal_to: The day the worker will be hired must be between 1 and 31
+              less_than_or_equal_to: The day the worker will be hired must be between 1 and 31
+              not_a_number: The day the worker will be hired must be a number
+              not_an_integer: The day the worker will be hired must be a whole number
             hire_date_month:
               blank: The date the worker will be hired must include a month
+              greater_than_or_equal_to: The month the worker will be hired must be between 1 and 12
+              less_than_or_equal_to: The month the worker will be hired must be between 1 and 12
+              not_a_number: The month the worker will be hired must be a number
+              not_an_integer: The month the worker will be hired must be a whole number
             hire_date_year:
               blank: The date the worker will be hired must include a year
+              not_a_number: The year the worker will be hired must be a number
+              not_an_integer: The year the worker will be hired must be a whole number
             markup_rate:
               blank: Enter a valid percentage mark-up rate
         supply_teachers/journey/looking_for:
