--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -337,6 +337,8 @@ en:
         hire_date_question_hint: For example, 31 3 1980
         markup_rate_question: What mark-up does the agency charge for the worker?
         markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
+        notice_date_question: What date did you notify the supplier that you wish to hire the worker?
+        notice_date_question_hint: Leave this blank if you haven't yet notified the supplier
       looking_for:
         answer_calculate_temp_to_perm_fee: To calculate the fee you'll be charged if you make an agency worker permanent
         answer_managed_service_provider: An agency to manage all my needs - a ‘managed service provider’
