Use specific translation for postcode validation message
I'm hoping to remove all of the errors.messages (i.e. generic)
translation strings, because then I should be able to remove the custom
errors.format translation string which in turn will mean that the
default validation error messages will include the attribute name and
will read sensibly, e.g. "can't be blank" -> "Name can't be blank".

Note that I had to make some changes to the SupplyTeachers::Branch model
spec, but this is now consistent with other places where we are testing
validation messages.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,12 +104,17 @@ en:
           attributes:
             worker_type:
               inclusion: Select yes if you want an agency to supply the worker
+  activerecord:
+    errors:
+      models:
+        supply_teachers/branch:
+          attributes:
+            postcode:
+              invalid_postcode: Enter a valid postcode
   common:
     submit: Continue
   errors:
     format: "%{message}"
-    messages:
-      invalid_postcode: Invalid postcode
   facilities_management:
     gateway:
       index:
