Add validation for TTPC hire_date being after contract_start_date
This replicates some behaviour in the spreadsheet version of the tool.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,8 @@ en:
               greater_than: The number of days worked per week must be between 0 and 5
               less_than_or_equal_to: The number of days worked per week must be between 0 and 5
               not_a_number: The number of days worked per week must be a number
+            hire_date:
+              after_contract_start_date: The date the worker will be hired must be after the date the contract started
             hire_date_day:
               blank: The date the worker will be hired must include a day
               greater_than_or_equal_to: The day the worker will be hired must be between 1 and 31
