--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,20 +35,20 @@ en:
           attributes:
             contract_start_day:
               blank: The contract start date must include a day
-              greater_than_or_equal_to: The day the contract starts must be between 1 and 31
-              less_than_or_equal_to: The day the contract starts must be between 1 and 31
-              not_a_number: The day the contract starts must be a number
-              not_an_integer: The day the contract starts must be a whole number
+              greater_than_or_equal_to: The day the contract started must be between 1 and 31
+              less_than_or_equal_to: The day the contract started must be between 1 and 31
+              not_a_number: The day the contract started must be a number
+              not_an_integer: The day the contract started must be a whole number
             contract_start_month:
               blank: The contract start date must include a month
-              greater_than_or_equal_to: The month the contract starts must be between 1 and 12
-              less_than_or_equal_to: The month the contract starts must be between 1 and 12
-              not_a_number: The month the contract starts must be a number
-              not_an_integer: The month the contract starts must be a whole number
+              greater_than_or_equal_to: The month the contract started must be between 1 and 12
+              less_than_or_equal_to: The month the contract started must be between 1 and 12
+              not_a_number: The month the contract started must be a number
+              not_an_integer: The month the contract started must be a whole number
             contract_start_year:
               blank: The contract start date must include a year
-              not_a_number: The year the contract starts must be a number
-              not_an_integer: The year the contract starts must be a whole number
+              not_a_number: The year the contract started must be a number
+              not_an_integer: The year the contract started must be a whole number
             day_rate:
               blank: Enter the number of pounds charged per day
               greater_than: The number of pounds charged per day must be more than 0
