--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -321,6 +321,7 @@ en:
         inputs_header: Choices used to generate this list
         mark-up_explanation_html: Results are sorted by mark-up from lowest to highest. Mark-up is the fee the supplier charges for their services. It's a percentage added to the worker's fee by the agency.
         other_radius_html: 'Change this distance to: '
+        page_title: Suppliers
         print: Print this page
         results_found_html: "<strong>%{results}</strong> found"
         results_found_with_location_html: "<strong>%{results}</strong> found within <strong>%{range}</strong> of <strong>%{postcode}</strong>."
@@ -334,6 +335,7 @@ en:
         panel_body: Based on the information provided you could be charged
     journey:
       agency_payroll:
+        page_title: School postcode and worker requirements
         postcode_question: What is your school’s postcode?
         question_hint: We use this to find agencies near to your school
         worker_term_question: How long do you need the worker for?
@@ -342,22 +344,27 @@ en:
         answer_calculate_temp_to_perm_fee: To calculate the fee you'll be charged if you make an agency worker permanent
         answer_managed_service_provider: An agency to manage all my needs - a ‘managed service provider’
         answer_worker: An agency to supply an individual worker
+        page_title: What are you looking for?
         question: What are you looking for?
       managed_service_provider:
         answer_master_vendor: Master vendor managed service
         answer_neutral_vendor: Neutral vendor managed service
         master_vendor_hint: These supply whatever candidates they can. Where they don’t have a suitable candidate themselves, they find other suppliers who do.
         neutral_vendor_hint: A neutral vendor only provides candidates from other suppliers - they have no candidates of their own.
+        page_title: What type of managed service do you want?
         question: What type of managed service do you want?
         question_hint: A managed service provider is a company that can manage all your temporary staff needs.
       payroll_provider:
         answer_agency_payroll: 'Yes'
         answer_school_payroll: No, I want to put the worker on our payroll
+        page_title: Do you want to put the worker on the school payroll?
         question: Do you want the agency to manage the worker's pay?
       school_postcode_agency_supplied_worker:
+        page_title: What is your school postcode
         question: What is your school’s postcode?
         question_hint: We use this to find agencies near to your school
       school_postcode_nominated_worker:
+        page_title: What is your school postcode
         question: What is your school’s postcode?
         question_hint: We use this to find agencies near to your school
       temp_to_perm_calculator:
@@ -377,14 +384,18 @@ en:
       worker_type:
         answer_agency_supplied: 'Yes'
         answer_nominated_worker: No, I have a worker I want the agency to manage (a ‘nominated worker’)
+        page_title: Do you want an agency to supply the worker?
         question: Do you want an agency to supply the worker?
+    page_section: Find supply teachers and agency staff
     suppliers:
       master_vendor:
         column1: Job type
         column2: Supplier mark-up
       master_vendors:
         header: Master vendor managed service providers
+        page_title: Master vendor managed service providers
       neutral_vendors:
         column1: Job type
         column2: Supplier mark-up
         header: Neutral vendor managed service providers
+        page_title: Neutral vendor managed service providers
