--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,58 @@ en:
               blank: The date the worker will be hired must include a year
               not_a_number: The year the worker will be hired must be a number
               not_an_integer: The year the worker will be hired must be a whole number
+            holiday_1_end_date_day:
+              greater_than_or_equal_to: The day of the end of the first holiday must be between 1 and 31
+              less_than_or_equal_to: The day of the end of the first holiday must be between 1 and 31
+              not_a_number: The day of the end of the first holiday must be a number
+              not_an_integer: The day of the end of the first holiday must be a whole number
+            holiday_1_end_date_month:
+              greater_than_or_equal_to: The month of the end of the first holiday must be between 1 and 12
+              less_than_or_equal_to: The month of the end of the first holiday must be between 1 and 12
+              not_a_number: The month of the end of the first holiday must be a number
+              not_an_integer: The month of the end of the first holiday must be a whole number
+            holiday_1_end_date_year:
+              not_a_number: The year of the end of the first holiday must be a number
+              not_an_integer: The year of the end of the first holiday must be a whole number
+            holiday_1_start_date_day:
+              greater_than_or_equal_to: The day of the start of the first holiday must be between 1 and 31
+              less_than_or_equal_to: The day of the start of the first holiday must be between 1 and 31
+              not_a_number: The day of the start of the first holiday must be a number
+              not_an_integer: The day of the start of the first holiday must be a whole number
+            holiday_1_start_date_month:
+              greater_than_or_equal_to: The month of the start of the first holiday must be between 1 and 12
+              less_than_or_equal_to: The month of the start of the first holiday must be between 1 and 12
+              not_a_number: The month of the start of the first holiday must be a number
+              not_an_integer: The month of the start of the first holiday must be a whole number
+            holiday_1_start_date_year:
+              not_a_number: The year of the start of the first holiday must be a number
+              not_an_integer: The year of the start of the first holiday must be a whole number
+            holiday_2_end_date_day:
+              greater_than_or_equal_to: The day of the end of the second holiday must be between 1 and 31
+              less_than_or_equal_to: The day of the end of the second holiday must be between 1 and 31
+              not_a_number: The day of the end of the second holiday must be a number
+              not_an_integer: The day of the end of the second holiday must be a whole number
+            holiday_2_end_date_month:
+              greater_than_or_equal_to: The month of the end of the second holiday must be between 1 and 12
+              less_than_or_equal_to: The month of the end of the second holiday must be between 1 and 12
+              not_a_number: The month of the end of the second holiday must be a number
+              not_an_integer: The month of the end of the second holiday must be a whole number
+            holiday_2_end_date_year:
+              not_a_number: The year of the end of the second holiday must be a number
+              not_an_integer: The year of the end of the second holiday must be a whole number
+            holiday_2_start_date_day:
+              greater_than_or_equal_to: The day of the start of the second holiday must be between 1 and 31
+              less_than_or_equal_to: The day of the start of the second holiday must be between 1 and 31
+              not_a_number: The day of the start of the second holiday must be a number
+              not_an_integer: The day of the start of the second holiday must be a whole number
+            holiday_2_start_date_month:
+              greater_than_or_equal_to: The month of the start of the second holiday must be between 1 and 12
+              less_than_or_equal_to: The month of the start of the second holiday must be between 1 and 12
+              not_a_number: The month of the start of the second holiday must be a number
+              not_an_integer: The month of the start of the second holiday must be a whole number
+            holiday_2_start_date_year:
+              not_a_number: The year of the start of the second holiday must be a number
+              not_an_integer: The year of the start of the second holiday must be a whole number
             markup_rate:
               blank: Enter a mark-up percentage
               greater_than_or_equal_to: The mark-up percentage must be between 0 and 100
@@ -377,6 +429,14 @@ en:
         days_per_week_question_hint: For example, 5
         hire_date_question: What date do you want to take the worker on permanently from?
         hire_date_question_hint: For example, 31 3 1980
+        holiday_1_end_date_question: What date did the first school holiday end?
+        holiday_1_end_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_1_start_date_question: What date did the first school holiday start?
+        holiday_1_start_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_2_end_date_question: What date did the second school holiday end?
+        holiday_2_end_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
+        holiday_2_start_date_question: What date did the second school holiday start?
+        holiday_2_start_date_question_hint: Leave this blank if there weren't any holidays between the contract start date and the hire date
         markup_rate_question: What mark-up does the agency charge for the worker?
         markup_rate_question_hint: This is the percentage fee you agreed with the supplier. For example, 40
         notice_date_question: What date did you notify the supplier that you wish to hire the worker?
