--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -256,8 +256,8 @@ en:
       feedback_html: This is a new service – your feedback (%{link}) will help us to improve it.
       having_problems: Having problems using this service?
       skip: Skip to main content
-      support_aria_label: Email us for support with this service
-      support_email_html: Email %{link} for support.
+      support_html: Email %{link} or call %{phone} for support.
+      support_link_aria_label: Email us for support with this service
       title: Crown Commercial Service
     header:
       go_start_page_aria_label: Go to start page of %{service_name}
